--- a/env/.env
+++ b/env/.env
@@ -3,7 +3,7 @@
 # DB_HOST = localhost
 # DB_USER = root
 # DB_PASSWORD = 1234
-# DB_DATABASE = login_node_digital
+# DB_DATABASE = diggital
 
 //Definimos los datos para JWT
 JWT_SECRETO = super_secret
